--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.2.3",
+    "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "google-auth-library": "^8.7.0",
+    "googleapis": "^110.0.0",
     "mongoose": "^6.8.4",
-    "open": "^8.4.0",
-    "request": "^2.88.2"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
